# pyovdb

./: .gitmodules  CMakeLists.txt  pyproject.toml
cmake/: override-blosc.cmake
