[build-system]
requires = [
  "scikit-build-core>=0.8",
  "setuptools",
  "wheel",
]
build-backend = "scikit_build_core.build"

[project]
name = "pyovdb"
version = "0.1"
description = "Python bindings for OpenVDB"
authors = [{ name = "hayk", email = "haykh.astro@gmail.com" }]
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python",
  "Programming Language :: C++",
  "Topic :: Scientific/Engineering :: Visualization",
]

[tool.scikit-build]
build.verbose = true
cmake.build-type = "Release"
wheel.expand-macos-universal-tags = true
